Release Ilios v0.3.0 workbench UI
